fixed image overflow

--- a/client/src/Pages/Landing/Landing.css
+++ b/client/src/Pages/Landing/Landing.css
@@ -47,6 +47,8 @@
 
 .itemPicture {
     width: 225px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
 .itemName {
